@@ -31,6 +31,7 @@ import org.apache.shardingsphere.mode.metadata.MetaDataContexts;
 import org.apache.shardingsphere.mode.metadata.persist.MetaDataPersistService;
 import org.apache.shardingsphere.proxy.backend.communication.jdbc.JDBCDatabaseCommunicationEngine;
 import org.apache.shardingsphere.proxy.backend.communication.jdbc.datasource.JDBCBackendDataSource;
+import org.apache.shardingsphere.proxy.backend.communication.jdbc.statement.JDBCBackendStatement;
 import org.apache.shardingsphere.proxy.backend.context.ProxyContext;
 import org.apache.shardingsphere.proxy.backend.exception.BackendConnectionException;
 import org.apache.shardingsphere.proxy.backend.session.ConnectionSession;
@@ -47,8 +48,6 @@ import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
 
 import java.lang.reflect.Field;
-import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Method;
 import java.sql.Connection;
 import java.sql.SQLException;
 import java.sql.Statement;
@@ -97,6 +96,9 @@ public final class JDBCBackendConnectionTest {
         backendConnection = spy(new JDBCBackendConnection(connectionSession));
         when(connectionSession.getBackendConnection()).thenReturn(backendConnection);
         when(connectionSession.getTransactionStatus()).thenReturn(new TransactionStatus(TransactionType.LOCAL));
+        JDBCBackendStatement backendStatement = new JDBCBackendStatement();
+        backendStatement.setSchemaName(connectionSession.getSchemaName());
+        when(connectionSession.getStatementManager()).thenReturn(backendStatement);
     }
     
     private void setContextManager() throws ReflectiveOperationException {
@@ -143,7 +145,7 @@ public final class JDBCBackendConnectionTest {
         Field field = ProxyContext.getInstance().getClass().getDeclaredField("backendDataSource");
         field.setAccessible(true);
         Class<?> clazz = field.getType();
-        Object datasource = clazz.getDeclaredConstructors()[0].newInstance();
+        Object datasource = clazz.getDeclaredConstructor().newInstance();
         field.set(ProxyContext.getInstance(), datasource);
     }
     
@@ -200,27 +202,6 @@ public final class JDBCBackendConnectionTest {
     }
     
     @Test
-    public void assertMultiThreadsGetConnection() throws SQLException, InterruptedException {
-        MockConnectionUtil.setCachedConnections(backendConnection, "ds1", 10);
-        when(backendDataSource.getConnections(anyString(), anyString(), eq(2), any())).thenReturn(MockConnectionUtil.mockNewConnections(2));
-        Thread thread1 = new Thread(this::assertOneThreadResult);
-        Thread thread2 = new Thread(this::assertOneThreadResult);
-        thread1.start();
-        thread2.start();
-        thread1.join();
-        thread2.join();
-    }
-    
-    @SneakyThrows(SQLException.class)
-    private void assertOneThreadResult() {
-        connectionSession.getTransactionStatus().setInTransaction(true);
-        List<Connection> actualConnections = backendConnection.getConnections("ds1", 12, ConnectionMode.MEMORY_STRICTLY);
-        assertThat(actualConnections.size(), is(12));
-        assertThat(backendConnection.getConnectionSize(), is(12));
-        assertTrue(connectionSession.getTransactionStatus().isInTransaction());
-    }
-    
-    @Test
     public void assertIsNotSerialExecuteWhenNotInTransaction() {
         connectionSession.getTransactionStatus().setInTransaction(false);
         assertFalse(backendConnection.isSerialExecute());
@@ -248,23 +229,12 @@ public final class JDBCBackendConnectionTest {
     }
     
     @Test
-    public void assertSetFetchSizeAsExpected() throws InvocationTargetException, IllegalAccessException, NoSuchMethodException, SQLException {
-        Statement statement = mock(Statement.class);
-        Method setFetchSizeMethod = JDBCBackendConnection.class.getDeclaredMethod("setFetchSize", Statement.class);
-        setFetchSizeMethod.setAccessible(true);
-        setFetchSizeMethod.invoke(backendConnection, statement);
-        verify(statement, times(1)).setFetchSize(Integer.MIN_VALUE);
-    }
-    
-    @Test
     public void assertCloseConnectionsCorrectlyWhenNotForceRollback() throws NoSuchFieldException, IllegalAccessException, SQLException {
         Field field = JDBCBackendConnection.class.getDeclaredField("cachedConnections");
         field.setAccessible(true);
         Multimap<String, Connection> cachedConnections = (Multimap<String, Connection>) field.get(backendConnection);
         Connection connection = prepareCachedConnections();
         cachedConnections.put("ignoredDataSourceName", connection);
-        ConnectionStatus connectionStatus = mock(ConnectionStatus.class);
-        prepareConnectionStatus(connectionStatus);
         backendConnection.closeConnections(false);
         verify(connection, times(1)).close();
         assertTrue(cachedConnections.isEmpty());
@@ -273,8 +243,6 @@ public final class JDBCBackendConnectionTest {
     
     @Test
     public void assertCloseConnectionsCorrectlyWhenForceRollbackAndNotInTransaction() throws SQLException {
-        ConnectionStatus connectionStatus = mock(ConnectionStatus.class);
-        prepareConnectionStatus(connectionStatus);
         connectionSession.getTransactionStatus().setInTransaction(false);
         Connection connection = prepareCachedConnections();
         backendConnection.closeConnections(true);
@@ -283,8 +251,6 @@ public final class JDBCBackendConnectionTest {
     
     @Test
     public void assertCloseConnectionsCorrectlyWhenForceRollbackAndInTransaction() throws SQLException {
-        ConnectionStatus connectionStatus = mock(ConnectionStatus.class);
-        prepareConnectionStatus(connectionStatus);
         connectionSession.getTransactionStatus().setInTransaction(true);
         Connection connection = prepareCachedConnections();
         backendConnection.closeConnections(true);
@@ -293,8 +259,6 @@ public final class JDBCBackendConnectionTest {
     
     @Test
     public void assertCloseConnectionsCorrectlyWhenSQLExceptionThrown() throws SQLException {
-        ConnectionStatus connectionStatus = mock(ConnectionStatus.class);
-        prepareConnectionStatus(connectionStatus);
         Connection connection = prepareCachedConnections();
         SQLException sqlException = new SQLException("");
         doThrow(sqlException).when(connection).close();
@@ -306,7 +270,8 @@ public final class JDBCBackendConnectionTest {
         Connection connection = mock(Connection.class);
         Statement statement = mock(Statement.class);
         when(connection.createStatement()).thenReturn(statement);
-        assertThat(backendConnection.createStorageResource(connection, ConnectionMode.MEMORY_STRICTLY, null), is(statement));
+        JDBCBackendStatement backendStatement = (JDBCBackendStatement) connectionSession.getStatementManager();
+        assertThat(backendStatement.createStorageResource(connection, ConnectionMode.MEMORY_STRICTLY, null), is(statement));
         verify(connection, times(1)).createStatement();
     }
     
@@ -340,13 +305,6 @@ public final class JDBCBackendConnectionTest {
         Connection connection = mock(Connection.class);
         cachedConnections.put("ignoredDataSourceName", connection);
         return connection;
-    }
-    
-    @SneakyThrows(ReflectiveOperationException.class)
-    private void prepareConnectionStatus(final ConnectionStatus connectionStatus) {
-        Field field = JDBCBackendConnection.class.getDeclaredField("connectionStatus");
-        field.setAccessible(true);
-        field.set(backendConnection, connectionStatus);
     }
     
     @SuppressWarnings("unchecked")
